# flash-plot

./: .gitignore  .mcp.json  README.md  package-lock.json  package.json  pyproject.toml
flashplot/: __init__.py  _core.py  _figure.py  _render.py
notebooks/: flash_plot_demo.ipynb
python/: setup.py
python/flash_plot/: __init__.py  _core.py  _figure.py  _render.py  engine.py  spec_renderer.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chart/: route.ts
src/app/api/chart/render/: route.ts
src/app/test/: page.tsx
src/app/test2/: page.tsx
src/lib/: chartEngine.tsx  graphApi.ts
src/lib/plot/: index.ts
src/lib/plot/core/: figure.ts  index.ts  layout.ts  paths.ts  renderChart.ts  scales.ts  theme.ts  types.ts
src/lib/plot/react/: CandlestickChart.tsx  FlashChart.tsx  PieChart.tsx  Surface3D.tsx  index.ts  useAnimation.ts
src/lib/plot/server/: index.ts  renderSvg.ts
src/mcp/: index.ts  server.ts
src/mcp/tools/: chartRender.ts  chartResolve.ts  chartStyles.ts
