[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-plot"
version = "0.1.0"
description = "Matplotlib-like charting engine with premium dark aesthetics — for Jupyter, Colab, and the web."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "QuantHive"},
]
keywords = ["plotting", "charting", "jupyter", "colab", "visualization", "svg", "dark-theme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/quanthive/flash-plot"
Repository = "https://github.com/quanthive/flash-plot"

[tool.setuptools.packages.find]
include = ["flashplot*"]
